added text to page 1 and 2 (28.06.2022)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Haranmes/book-for-faust/issues"
+  },
+  "dependencies": {
+    "turn.js": "^1.0.5"
   }
-  
 }
